<resources>
    <string name="app_name">Where Am I</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Localization</string>
    <string name="title_prediction">Prediction</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_training_status">%1$s Training Status</string>
    <string name="fh_bar_title">Posts</string>
    <string name="fh_posts_request_failure">Was not possible to retrieve posts from the server</string>
    <string name="fli_localization_options_training">Training</string>
    <string name="fli_localization_options_spam">Spam</string>
    <string name="fli_localization_options_delete">Delete</string>
    <string name="fli_localization_training_request_success">Your requested was queued</string>
    <string name="fli_localization_training_request_failure">Cannot delete localizationId</string>
    <string name="fli_localization_spam_request_success">Thank you for your report</string>
    <string name="fli_localization_spam_request_failure">Cannot send your report</string>
    <string name="fli_localization_delete_request_failure">Cannot delete localization</string>
    <string name="fntr_request_algorithm_error">Was not possible to retrieve algorithms from the server</string>
    <string name="fntr_training_submit_btn">Train</string>
    <string name="fntr_training_submit_btn_label">Submit</string>
    <string name="ftli_delete_training_request_failure">Was not possible to delete.</string>
    <string name="ftli_training_request_failure">Was not possible to retrieve training status from the server</string>
    <string name="ftli_delete_training_request">Delete</string>
    <string name="ftli_delete_training_status_sub_header">STATUS: %1$s.  LAST UPDATE: %2$s</string>
    <string name="fpi_position_options_spam">Spam</string>
    <string name="fpi_position_options_delete">Delete</string>
    <string name="fpi_position_list_request_failure">Was not possible to retrieve positions from the server</string>
    <string name="fpd_position_number_of_online_samples">Online Samples</string>
    <string name="fpd_position_number_of_offline_samples">Offline Samples</string>
    <string name="fpd_position_number_of_routers">Routers</string>
    <string name="fpd_position_number_of_network_names">Networks</string>
    <string name="fpd_position_top_router">Best Signal</string>
    <string name="fpd_position_send_samples_btn">Send</string>
    <string name="fpd_position_stop_samples_btn">Stop</string>
    <string name="fnp_new_position_label_input_hint">Label</string>
    <string name="fnp_new_position_label_empty_input">Label cannot be empty</string>
    <string name="fnp_new_position_label_duplicate_input">Label already exists</string>
    <string name="fnp_new_position_label_request_failure">Not was possible to create positionId</string>
    <string name="fnp_new_position_btn">Create</string>
    <string name="fnl_new_localization_informative_text">This application does not require any kind of authentication, so please fill the username to something meaning to you.</string>
    <string name="fnl_new_localization_label_input_hint">Localization name</string>
    <string name="fnl_new_username_input_hint">Username</string>
    <string name="fnl_is_localization_private_training_phase_input_hint">Visible in localization menu to other users</string>
    <string name="fnl_can_other_send_samples">Allow other users to contribute with samples</string>
    <string name="fnl_is_localization_private_prediction_phase_input_hint">Allow other users to request predictions</string>
    <string name="fnl_new_localization_submit_btn">Create</string>
    <string name="fnl_new_localization_request_duplicate_failure">The pair localizationId name and username already exists</string>
    <string name="fnl_new_localization_request_failure">Not able to create localizationId</string>
    <string name="fnl_new_localization_empty_name">A localization must have a name</string>
    <string name="fnl_new_localization_empty_username">A localization must have a username</string>
    <string name="app_options_menu_about">About</string>
    <string name="app_options_menu_notifications">Notifications</string>
    <string name="app_options_menu_settings">Settings</string>
    <string name="app_options_menu_feedback">Feedback</string>
    <string name="fll_localization_actionbar_title">Localizations</string>
    <string name="fll_localization_list_request_failure">Was not possible to retrieve localizations from the server</string>
    <string name="fntr_new_training_algorithm_label">Algorithms</string>
    <string name="fntr_new_training_algorithm_implementation_label">Implementations</string>
    <string name="fntr_new_training_algorithm_invalid_request">Must choose an Algorithm and a Implementation</string>
    <string name="fntr_new_training_algorithm_request_failure">The server does not have taken the request</string>
    <string name="fntr_new_training_algorithm_request_failure_w_status">The server does not have taken the request responding with %1$d status code</string>
    <string name="fntr_new_training_provider_name">Provider %1$d - Prediction rate of %2$.0f%% - Deployed: %3$s </string>
    <string name="fpl_samples">Fingerprints</string>
    <string name="fpl_models">Trained Models</string>
    <string name="fpl_positions">Positions</string>
    <string name="fp_prediction_actionbar_title">Prediction</string>
    <string name="fpdi_prediction_label_item">Batch %1d | accuracy of %2$.0f%%</string>
    <string name="fpda_start_request_predictions_label">Predict</string>
    <string name="fpda_start_request_all_predictions_label">All Predicts</string>
    <string name="fpda_stop_request_predictions_label">Stop</string>
    <string name="notification_item_sub_header">RECEIVED IN %1$s</string>
    <string name="fpdi_prediction_feedback_failure">Could not register your feedback</string>
    <string name="notification_new_algorithm">A %1s algorithm with id of %2s is waiting for your approval</string>
    <string name="notification_new_model">The provider %1s have conclude the training model for the localization %2s</string>
    <string name="notification_delete_algorithm">One provider for the algorithm %1s was deleted</string>
    <string name="new_notification">You have a new Notification</string>
    <string name="ab_app_version"><b>Version</b>: </string>
    <string name="ab_app_author"><b>Author</b>: <a href="https://github.com/NunuM">Nuno Gonçalves (NunuM)</a></string>
    <string name="ab_app_server_page"><b>Website</b>: <a href="https://whereami.nunum.me">WhereAmI</a></string>
    <string name="ab_app_code_page"><b>Github</b>: <a href="https://github.com/NunuM/where-am-i-android-app">Project</a></string>
    <string name="ab_app_code_donate"><b>Donate</b>: <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=5F3L26AKGKLR2&amp;source=url">PayPal</a></string>
    <string name="ab_app_description"><b>Where Am I</b> is an open source application to test novel algorithms that are able to determine the users localization using labeled WI-FI fingerprints.</string>
    <string name="ab_made_author">Made with ❤️ by NunuM</string>
    <string name="an_notification_options_menu_delete_all">Delete All</string>
    <string name="an_notification_options_menu_seen_all">Mark as Seen</string>
    <string name="an_no_data_available">You not have any notification!</string>
    <string name="af_empty_contact">Contact field cannot be empty</string>
    <string name="af_empty_message">Message field cannot be empty</string>
    <string name="af_submit_feedback_request_failure">Sorry, we could not persist your feedback</string>
    <string name="af_message_feedback_hint">Use this form to propose new features, material for new posts, eventual bugs or other anything else.</string>
    <string name="af_submit_feedback_btn">Send</string>
    <string name="af_submit_feedback_request_success">Thank you for your feedback</string>
    <string-array name="pref_protocol_list_titles">
        <item>HTTP</item>
    </string-array>
    <string name="pref_http_offline_port">Offline Host Port</string>
    <string name="pref_http_offline_port_summary">In case of TCP, a port must be given</string>
    <string name="pref_http_online_port">Online Host Port</string>
    <string name="pref_http_online_port_summary">In case of TCP, a port must be given</string>
    <string name="pref_instance_id">Installation ID</string>
    <string name="pref_instance_id_summary">This characters represent your device.</string>
    <string name="pref_offline_use_protocol">Offline Protocol</string>
    <string name="pref_offline_use_protocol_description">Choose between TCP and HTTP for offline phase.
    </string>
    <string name="pref_online_use_protocol">Online Protocol</string>
    <string name="pref_online_use_protocol_description">Choose between TCP and HTTP for querying phase.
    </string>
    <string name="pref_hostname_label">Hostname</string>
    <string name="pref_hostname_summary">All communication will use this endpoint. Just specify the scheme and authority (RFC3986).</string>
    <string name="pref_hostname_default">https://whereami.nunum.me/api</string>
    <string name="pref_http_post_resource">Posts Resource</string>
    <string name="pref_http_post_resource_summary">The source of the home page posts</string>
    <string name="pref_http_train_resource">Train Resource</string>
    <string name="pref_http_train_resource_summary">The resource responsible for queue training request.</string>
    <string name="pref_http_localization_spam_resource">Localization Spam Resource</string>
    <string name="pref_http_localization_spam_resource_summary">The resource responsible for receive localizationId spam reports.</string>
    <string name="pref_http_position_spam_resource">Position Spam Resource</string>
    <string name="pref_http_position_spam_resource_summary">The resource responsible for receive positionId spam reports.</string>
    <string name="pref_http_localization_title">Localizations Resource</string>
    <string name="pref_http_localization_description">The application will fetch available localizations.</string>
    <string name="pref_http_position_title">Position Resource</string>
    <string name="pref_http_position_description">Within a localizationId, there are positions.</string>
    <string name="pref_http_display_only_my_localizations">My Localizations</string>
    <string name="pref_http_display_only_my_localizations_description">List only my localizations.</string>
    <string name="pref_http_localization_paging_title">Pagination</string>
    <string name="pref_http_localization_paging_description"><![CDATA[The applications will fetch N localizations per request. Ex=.../?page=3]]></string>
    <string name="pref_http_fingerprint_resource">Fingerprint Resource</string>
    <string name="pref_http_fingerprint_resource_summary">A fingerprint will be submitted to this resource.</string>
    <string name="pref_http_query_resource">Prediction Resource</string>
    <string name="pref_http_query_resource_summary">Based on a fingerprint, the resource will respond with the user localizationId prediction.</string>
    <string name="pref_offline_header">Offline Phase</string>
    <string name="pref_online_header">Online Phase</string>
    <string name="pref_http_api_header">HTTP API</string>
    <string name="pref_general_header">General</string>
    <string name="pref_offline_delay">Start delay</string>
    <string name="pref_offline_delay_description">The application will start sending data after a given delay (in seconds).
    </string>
    <string name="pref_offline_interval">Interval</string>
    <string name="pref_offline_interval_description">The application will send one fingerprint sample spaced by a given delta time (in seconds).
    </string>
</resources>