<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pre_offline_delay_list_entries"
        android:entryValues="@array/pre_offline_delay_list_entries"
        android:key="producer_delay"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="@string/pref_offline_delay_description"
        android:title="@string/pref_offline_delay" />

    <ListPreference
        android:defaultValue="30"
        android:entries="@array/pre_offline_interval_list_entries"
        android:entryValues="@array/pre_offline_interval_list_entries"
        android:key="producer_period"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="@string/pref_offline_interval_description"
        android:title="@string/pref_offline_interval" />

</PreferenceScreen>