<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.NewLocalizationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/fnl_input_localization_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/fnl_new_localization_label_input_hint"
            android:inputType="text"
            android:text="" />

        <EditText
            android:id="@+id/fnl_input_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/fnl_new_username_input_hint"
            android:inputType="text"
            android:text="" />

        <Switch
            android:id="@+id/fnl_privacy_for_training_phase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/fnl_is_localization_private_training_phase_input_hint"
            android:textColor="@color/grey"/>

        <Switch
            android:id="@+id/fnl_can_send_samples"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/fnl_can_other_send_samples"
            android:textColor="@color/grey"/>


        <Switch
            android:id="@+id/fnl_privacy_for_online_phase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/fnl_is_localization_private_prediction_phase_input_hint"
            android:textColor="@color/grey"/>


        <Button
            android:id="@+id/fnl_submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/fnl_new_localization_submit_btn" />

    </LinearLayout>
</FrameLayout>