<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PositionDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fpd_position_header_label"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:padding="40dp"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textAllCaps="true" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1.5"
                android:text="@string/fpd_position_number_of_online_samples"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fpd_position_number_of_online_samples"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight=".5" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_weight="1.5"
                android:text="@string/fpd_position_number_of_offline_samples"
                android:textStyle="bold"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/fpd_position_number_of_offline_samples"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="0.5" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_weight="1.5"
                android:text="@string/fpd_position_number_of_routers"
                android:textStyle="bold"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/fpd_position_number_of_routers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="0.5" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_weight="1.5"
                android:text="@string/fpd_position_number_of_network_names"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fpd_position_number_of_network_names"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="0.5" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_weight="1.5"
                android:text="@string/fpd_position_top_router"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fpd_position_top_router"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="0.5" />

        </LinearLayout>

        <ToggleButton
            android:id="@+id/fpd_position_samples_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:textOff="@string/fpd_position_send_samples_btn"
            android:textOn="@string/fpd_position_stop_samples_btn" />

    </LinearLayout>

</FrameLayout>